# database-bot

./: .gitignore  cbot_chat_app.py  generate.py  langchain_agent.py  pandasai_app.py  pyproject.toml  sqlcoder_agent.py
data/: schema.sql
src/generate_data/: fake_data.py
src/pandasai_agent/: read_schema.py
